# snowflake

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
apps/: CMakeLists.txt  glow.cpp  snowflake.cpp
cmake/: FindSDL2.cmake
include/ripple/core/log/: logger.hpp
include/ripple/core/memory/: aligned_heap_allocator.hpp  allocator.hpp  arena.hpp  intrusive_pointer.hpp  linear_allocator.hpp  pool_allocator.hpp  ref_counter.hpp  ref_tracker.hpp  utils.hpp
include/ripple/core/util/: portability.hpp
include/ripple/glow/backend/platform/: platform.hpp  platform_base.hpp  platform_fwd.hpp  sdl_platform.hpp
include/ripple/glow/backend/vk/: driver_allocator.hpp  frame_data.hpp  vulkan_command_buffer.hpp  vulkan_command_pool.hpp  vulkan_context.hpp  vulkan_driver.hpp  vulkan_headers.hpp  vulkan_surface_context.hpp
include/ripple/glow/engine/: engine.hpp
include/ripple/glow/vk/: context.hpp  device.hpp  vulkan_headers.hpp
include/ripple/glow/vk/platform/: apple_cocoa_platform.hpp  platform.hpp  platform_base.hpp  platform_fwd.hpp  sdl_platform.hpp
include/ripple/glow/vk/window/: window.hpp
include/ripple/glow/window/: window.hpp
include/snowflake/: engine.hpp  resource_map.hpp  window.hpp
include/snowflake/backend/platform/: platform.hpp  platform_base.hpp  platform_fwd.hpp  sdl_platform.hpp
include/snowflake/backend/vk/: driver_allocator.hpp  frame_data.hpp  vulkan_command_buffer.hpp  vulkan_command_pool.hpp  vulkan_context.hpp  vulkan_driver.hpp  vulkan_headers.hpp  vulkan_surface_context.hpp
include/snowflake/ecs/: component_id.hpp  component_storage.hpp  entity.hpp  entity_manager.hpp  reverse_iterator.hpp  sparse_set.hpp
include/snowflake/engine/: engine.hpp  resource_map.hpp  window.hpp
include/snowflake/renderer/: renderer.hpp
include/snowflake/rendering/: renderer.hpp  scene_view.hpp
include/snowflake/rendering/backend/platform/: platform.hpp  platform_base.hpp  platform_fwd.hpp  sdl_platform.hpp
include/snowflake/rendering/backend/vk/: driver_allocator.hpp  frame_data.hpp  vulkan_command_buffer.hpp  vulkan_command_pool.hpp  vulkan_context.hpp  vulkan_driver.hpp  vulkan_headers.hpp  vulkan_surface_context.hpp
include/snowflake/util/: portability.hpp
include/snowflake/window/: window.hpp
src/: apple_cocoa_platform.mm  engine.cpp  window.cpp  window_android.cpp  window_win32.cpp  window_x11.cpp
src/backend/platform/: sdl_platform.cpp
src/backend/vk/: frame_data.cpp  vulkan_command_buffer.cpp  vulkan_command_pool.cpp  vulkan_context.cpp  vulkan_driver.cpp  vulkan_surface_context.cpp
src/engine/: engine.cpp  window.cpp
src/rendering/: renderer.cpp
src/rendering/backend/platform/: sdl_platform.cpp
src/rendering/backend/vk/: frame_data.cpp  vulkan_command_buffer.cpp  vulkan_command_pool.cpp  vulkan_context.cpp  vulkan_driver.cpp  vulkan_surface_context.cpp
src/vk/: apple_cocoa_platform.mm  context.cpp  sdl_platform.cpp  window.cpp
src/window/: window.cpp
tests/: CMakeLists.txt  ecs.cpp
tests/ecs/: component_id.hpp  component_storage.hpp  entity.hpp  entity_manager.hpp  reverse_iterator.hpp  sparse_set.hpp
